# nodejs_linker_sandboxing

./: .gitignore  WORKSPACE
app/: BUILD.bazel  index.js  package.json  webpack.config.js
app/src/: app.py
webpack_bundle/: BUILD.bazel  webpack.config.tpl.js  webpack_bundle.bzl  webpack_wrapper.js
